Fixed broken image link on homepage | Created new snap-scroll-parent for homepage to remedy flickering on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,12 @@ section {
     height: 100vh;
     overflow-x: hidden;
 }
-
-
+.snap-scroll-parent-home {
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    height: 100vh;
+    overflow-x: hidden;
+}
 
 .snap-scroll-child {
     scroll-snap-align: start;
